@@ -1,3 +1,9 @@
+2007-09-23  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-desktop.c: (wp_drag_received), (wp_drag_get_data),
+	(desktop_init): add support for dragging images from the background list
+	(bug #150544)
+
 2007-09-21  Jens Granseuer  <jensgr@gmx.net>
 
 	* theme-installer.c: (gnome_theme_install_real): reword the "theme engine"
